# aio-bluesky-kafka

./: README.md  pyproject.toml
aio_bluesky_kafka/: __init__.py  aio_bluesky_kafka_msg_handler.py
as_aio_bluesky_kafka/: __init__.py  msg_handler.py
tests/: test_aio_bluesky_kafka.py  test_as_aio_bluesky_kafka.py
