[tool.poetry]
name = "as-aio-bluesky-kafka"
version = "0.1.1"
description = "an asyncio adapter for running a bluesky-kafka consumer"
readme = "./README.md"
authors = ["Alex Palma <alexp@ansto.gov.au>"]

[tool.poetry.dependencies]
python = "^3.5"
bluesky-kafka = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
